--- a/Defabricator/Defabricator.csproj
+++ b/Defabricator/Defabricator.csproj
@@ -12,20 +12,19 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <OutputPath>..\QMods\$(Configuration)\Defabricator\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\Program Files (x86)\Steam\steamapps\common\Subnautica\QMods\Decrafter\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Program Files (x86)\Steam\steamapps\common\Subnautica\QMods\Defabricator\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -105,7 +104,6 @@
     <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "$(TargetDir)$(TargetFileName).tmp"
 del "$(TargetDir)\*.dll"
 copy "$(TargetDir)$(TargetFileName).tmp" "$(TargetDir)$(TargetFileName)"
-del  "$(TargetDir)$(TargetFileName).tmp"
-del  "$(TargetDir)$(TargetName).pdb"</PostBuildEvent>
+del  "$(TargetDir)$(TargetFileName).tmp"</PostBuildEvent>
   </PropertyGroup>
 </Project>
