--- a/AssetTools/AssetTools.csproj
+++ b/AssetTools/AssetTools.csproj
@@ -50,7 +50,7 @@
       <Private>false</Private>
     </Reference>
     <Reference Include="SMLHelper">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\SubnauticaZero\QMods\Modding Helper\SMLHelper.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\SubnauticaZero\QMods\SMLHelper_BZ\SMLHelper.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System">
