--- a/Defabricator/Defabricator.csproj
+++ b/Defabricator/Defabricator.csproj
@@ -44,7 +44,8 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="SMLHelper">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\SubnauticaZero\QMods\Modding Helper\SMLHelper.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\SubnauticaZero\QMods\SMLHelper_BZ\SMLHelper.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
